--- a/memory_sequence.ipynb
+++ b/memory_sequence.ipynb
@@ -998,7 +998,7 @@
     "\n",
     "        rng = jax.random.PRNGKey(12)\n",
     "        test = jax.jit(jax.vmap(init_eval_params_and_return, in_axes=(0, None, None)))\n",
-    "        other_params = jax.tree_map(lambda x: x[k,i], all_outs[0][0].params)\n",
+    "        other_params = jax.tree.map(lambda x: x[k,i], all_outs[0][0].params)\n",
     "        infos = test(jax.random.split(rng, popsize), other_params, init_env_params)\n",
     "\n",
     "        num_generations = 8\n",
