--- a/memory_sequence.ipynb
+++ b/memory_sequence.ipynb
@@ -1207,8 +1207,8 @@
         "            sorted_trial_indices = jnp.argsort(trial_scores_per_agent[best_agent_idx])  # \u4ece\u5c0f\u5230\u5927\n",
         "            # \u91cd\u65b0\u6392\u5217\uff1atrial 0=\u6700\u5dee\uff0ctrial 1=\u6b21\u5dee\uff0ctrial 2=\u6b21\u4f18\uff0ctrial 3=\u6700\u597d\n",
         "            saved_scores = trial_scores_per_agent[best_agent_idx][sorted_trial_indices]\n",
-        "            saved_states = infos[-2][best_agent_idx,-1,:][sorted_trial_indices]\n",
-        "            saved_obs = infos[-1][best_agent_idx,-1,:][sorted_trial_indices]\n",
+        "            saved_states = infos[-2][best_agent_idx,-1,:][sorted_trial_indices][None,:].repeat(popsize, axis=0)\n",
+        "            saved_obs = infos[-1][best_agent_idx,-1,:][sorted_trial_indices][None,:].repeat(popsize, axis=0)\n",
         "            trial_scores.append(saved_scores.mean(0))\n",
         "            print(saved_scores.mean(0))\n",
         "\n",
@@ -1224,7 +1224,7 @@
         "\n",
         "        trial_scores.append(saved_scores.mean(0))\n",
         "        all_trial_scores.append(np.array(trial_scores))\n",
-        "    test_all_trial_scores.append(np.array(all_trial_scores))"
+        "    test_all_trial_scores.append(np.array(all_trial_scores))\n"
       ]
     },
     {
