--- a/memory_sequence.ipynb
+++ b/memory_sequence.ipynb
@@ -961,7 +961,7 @@
         "\n",
         "    # COLLECT TRAJECTORIES\n",
         "    def _env_step(runner_state, unused):\n",
-        "        prev_env_state, env_params, last_obs, last_done, prev_hstate, rng, ever_done, running_r, running_hstate, running_obs = runner_state\n",
+        "        prev_env_state, env_params, last_obs, last_done, prev_hstate, rng, ever_done, running_r, running_hstates, running_obss = runner_state\n",
         "        rng, _rng = jax.random.split(rng)\n",
         "\n",
         "        # SELECT ACTION\n",
@@ -979,18 +979,26 @@
         "        temp_r = running_r[prev_env_state.trial_num] + (reward >= 0.0) * (1.0 - ever_done)\n",
         "        running_r = running_r.at[prev_env_state.trial_num].set(temp_r)\n",
         "\n",
-        "        # ONLY FINAL HIDDEN STATE AND ACTION\n",
-        "        replace_hstate = jnp.logical_and((prev_env_state.trial_num == env.num_trials - 2), ~ever_done)\n",
-        "        running_hstate = running_hstate * (1.0 - replace_hstate) + hstate * replace_hstate\n",
-        "        running_obs = running_obs * (1.0 - replace_hstate) + obsv * replace_hstate\n",
+        "        # \u4e3a\u6bcf\u4e2atrial\u4fdd\u5b58hidden state\u548cobservation\n",
+        "        trial_idx = prev_env_state.trial_num\n",
+        "        replace_hstate = jnp.logical_and((prev_env_state.trial_num == trial_idx), ~ever_done)\n",
+        "        running_hstates = running_hstates.at[trial_idx].set(\n",
+        "            running_hstates[trial_idx] * (1.0 - replace_hstate) + hstate * replace_hstate\n",
+        "        )\n",
+        "        running_obss = running_obss.at[trial_idx].set(\n",
+        "            running_obss[trial_idx] * (1.0 - replace_hstate) + obsv * replace_hstate\n",
+        "        )\n",
         "\n",
         "        ever_done = jnp.logical_or(done, ever_done)\n",
-        "        # transition = (prev_env_state, action, running_r, reward, hstate)\n",
-        "        transition = (env_state, action, reward, replace_hstate, running_r, running_hstate, running_obs)\n",
-        "        runner_state = (env_state, env_params, obsv, done, hstate, rng, ever_done, running_r, running_hstate, running_obs)\n",
+        "        transition = (env_state, action, reward, running_r, running_hstates, running_obss)\n",
+        "        runner_state = (env_state, env_params, obsv, done, hstate, rng, ever_done, running_r, running_hstates, running_obss)\n",
         "        return runner_state, transition\n",
         "\n",
-        "    runner_state = (env_state, env_params, last_obs, False, init_state, rng, False, jnp.zeros((env.num_trials,)), init_state, last_obs)\n",
+        "    # \u521d\u59cb\u5316\uff1a\u4e3a\u6bcf\u4e2atrial\u521b\u5efa\u72ec\u7acb\u7684state\u548cobs\u5b58\u50a8\n",
+        "    running_hstates = jnp.stack([init_state] * env.num_trials)\n",
+        "    running_obss = jnp.stack([last_obs] * env.num_trials)\n",
+        "    \n",
+        "    runner_state = (env_state, env_params, last_obs, False, init_state, rng, False, jnp.zeros((env.num_trials,)), running_hstates, running_obss)\n",
         "    runner_state, traj_batch = jax.lax.scan(_env_step, runner_state, None, env.max_trial_len*env.num_trials+1)\n",
         "    return traj_batch\n",
         "\n",
@@ -1002,7 +1010,7 @@
         "\n",
         "    # COLLECT TRAJECTORIES\n",
         "    def _env_step(runner_state, unused):\n",
-        "        prev_env_state, env_params, last_obs, last_done, prev_hstate, rng, ever_done, running_r, running_hstate, running_obs = runner_state\n",
+        "        prev_env_state, env_params, last_obs, last_done, prev_hstate, rng, ever_done, running_r = runner_state\n",
         "        rng, _rng = jax.random.split(rng)\n",
         "\n",
         "        # SELECT ACTION\n",
@@ -1020,20 +1028,15 @@
         "        temp_r = running_r[prev_env_state.trial_num] + (reward >= 0.0) * (1.0 - ever_done)\n",
         "        running_r = running_r.at[prev_env_state.trial_num].set(temp_r)\n",
         "\n",
-        "        # ONLY FINAL HIDDEN STATE AND ACTION\n",
-        "        replace_hstate = jnp.logical_and((prev_env_state.trial_num == env.num_trials - 2), ~ever_done)\n",
-        "        running_hstate = running_hstate * (1.0 - replace_hstate) + hstate * replace_hstate\n",
-        "        running_obs = running_obs * (1.0 - replace_hstate) + obsv * replace_hstate\n",
-        "\n",
         "        ever_done = jnp.logical_or(done, ever_done)\n",
-        "        # transition = (prev_env_state, action, running_r, reward, hstate)\n",
-        "        transition = (env_state, action, reward, running_r, running_hstate, running_obs)\n",
-        "        runner_state = (env_state, env_params, obsv, done, hstate, rng, ever_done, running_r, running_hstate, running_obs)\n",
+        "        transition = (env_state, action, reward, running_r)\n",
+        "        runner_state = (env_state, env_params, obsv, done, hstate, rng, ever_done, running_r)\n",
         "        return runner_state, transition\n",
         "\n",
-        "    runner_state = (env_state, env_params, last_obs, False, init_state, rng, False, jnp.zeros((env.num_trials,)), init_state, last_obs)\n",
+        "    runner_state = (env_state, env_params, last_obs, False, init_state, rng, False, jnp.zeros((env.num_trials,)))\n",
         "    runner_state, traj_batch = jax.lax.scan(_env_step, runner_state, None, env.max_trial_len*env.num_trials+1)\n",
-        "    return traj_batch\n"
+        "    return traj_batch\n",
+        "\n"
       ]
     },
     {
@@ -1199,32 +1202,41 @@
         "        num_generations = 8\n",
         "        trial_scores = []\n",
         "        for j in range(num_generations):\n",
-        "            # \u65b0\u65b9\u6cd5\uff1a\u5bf9\u6bcf\u4e2aagent\u76844\u4e2atrials\u6309\u5206\u6570\u6392\u5e8f\uff08\u4ece\u5dee\u5230\u597d\uff09\n",
-        "            trial_scores_per_agent = infos[-3][:,-1,:]  # shape: (popsize, num_trials)\n",
-        "            # \u9009\u62e9\u8868\u73b0\u6700\u597d\u7684agent\n",
-        "            best_agent_idx = jnp.argmax(trial_scores_per_agent.mean(axis=1))\n",
-        "            # \u5bf9\u8be5agent\u76844\u4e2atrials\u6309\u5206\u6570\u6392\u5e8f\n",
-        "            sorted_trial_indices = jnp.argsort(trial_scores_per_agent[best_agent_idx])  # \u4ece\u5c0f\u5230\u5927\n",
-        "            # \u91cd\u65b0\u6392\u5217\uff1atrial 0=\u6700\u5dee\uff0ctrial 1=\u6b21\u5dee\uff0ctrial 2=\u6b21\u4f18\uff0ctrial 3=\u6700\u597d\n",
-        "            saved_scores = trial_scores_per_agent[best_agent_idx][sorted_trial_indices]\n",
-        "            saved_states = infos[-2][best_agent_idx,-1,:][sorted_trial_indices][None,:].repeat(popsize, axis=0)\n",
-        "            saved_obs = infos[-1][best_agent_idx,-1,:][sorted_trial_indices][None,:].repeat(popsize, axis=0)\n",
-        "            trial_scores.append(saved_scores.mean(0))\n",
-        "            print(saved_scores.mean(0))\n",
+        "            # \u83b7\u53d6\u6240\u6709agents\u7684\u6240\u6709trials\u7684\u5206\u6570\n",
+        "            trial_scores_all = infos[-3][:,-1,:]  # shape: (popsize, num_trials)\n",
+        "            \n",
+        "            # \u9009\u62e9\u5e73\u5747\u8868\u73b0\u6700\u597d\u7684agent\n",
+        "            best_agent_idx = jnp.argmax(trial_scores_all.mean(axis=1))\n",
+        "            \n",
+        "            # \u5bf9\u8be5agent\u7684trials\u6309\u5206\u6570\u6392\u5e8f\uff08\u4ece\u5dee\u5230\u597d\uff09\n",
+        "            sorted_trial_indices = jnp.argsort(trial_scores_all[best_agent_idx])\n",
+        "            \n",
+        "            # \u83b7\u53d6\u6392\u5e8f\u540e\u7684scores, states, obs\n",
+        "            # infos[-2]\u662frunning_hstates\uff0cshape: (popsize, timesteps, num_trials, hidden_size)\n",
+        "            # infos[-1]\u662frunning_obss\uff0cshape: (popsize, timesteps, num_trials, obs_dim)\n",
+        "            saved_scores = trial_scores_all[best_agent_idx][sorted_trial_indices]\n",
+        "            saved_states = infos[-2][best_agent_idx, -1, sorted_trial_indices]  # shape: (num_trials, hidden_size)\n",
+        "            saved_obs = infos[-1][best_agent_idx, -1, sorted_trial_indices]  # shape: (num_trials, obs_dim)\n",
+        "            \n",
+        "            trial_scores.append(saved_scores)\n",
+        "            print(saved_scores)\n",
         "\n",
+        "            # \u521b\u5efaenv_params\uff0c\u6bcf\u4e2aagent\u4f7f\u7528\u5bf9\u5e94\u6392\u5e8f\u540e\u7684trial\u793a\u8303\n",
+        "            # trial 0 -> \u6700\u5dee\u793a\u8303, trial 1 -> \u6b21\u5dee, trial 2 -> \u6b21\u4f18, trial 3 -> \u6700\u597d\n",
         "            env_params = EnvParams(\n",
         "                other_params=other_params,\n",
-        "                other_init_state=saved_states,\n",
-        "                other_init_last_obs=saved_obs,\n",
+        "                other_init_state=saved_states,  # shape: (num_trials, hidden_size)\n",
+        "                other_init_last_obs=saved_obs,  # shape: (num_trials, obs_dim)\n",
         "            )\n",
         "\n",
         "            rng = jax.random.PRNGKey(3)\n",
         "            test = jax.jit(jax.vmap(eval_params_and_return, in_axes=(0, None, None)))\n",
         "            infos = test(jax.random.split(rng, popsize), other_params, env_params)\n",
         "\n",
-        "        trial_scores.append(saved_scores.mean(0))\n",
+        "        trial_scores.append(saved_scores)\n",
         "        all_trial_scores.append(np.array(trial_scores))\n",
-        "    test_all_trial_scores.append(np.array(all_trial_scores))\n"
+        "    test_all_trial_scores.append(np.array(all_trial_scores))\n",
+        "\n"
       ]
     },
     {
