--- a/memory_sequence.ipynb
+++ b/memory_sequence.ipynb
@@ -1218,15 +1218,20 @@
         "            saved_states = infos[-2][best_agent_idx, -1, sorted_trial_indices]  # shape: (num_trials, hidden_size)\n",
         "            saved_obs = infos[-1][best_agent_idx, -1, sorted_trial_indices]  # shape: (num_trials, obs_dim)\n",
         "            \n",
+        "            # \u53ea\u4f7f\u7528\u524dnum_agents\u4e2atrials\u6765\u5339\u914d\u73af\u5883\u671f\u671b\u7684\u7ef4\u5ea6\n",
+        "            # \u8fd9\u6837\u4f7f\u7528\uff1a\u6700\u5dee\u3001\u6b21\u5dee\u3001\u6b21\u4f18\uff08\u8df3\u8fc7\u6700\u597d\u7684\uff09\n",
+        "            saved_states = saved_states[:popsize]  # shape: (popsize, hidden_size)\n",
+        "            saved_obs = saved_obs[:popsize]  # shape: (popsize, obs_dim)\n",
+        "            \n",
         "            trial_scores.append(saved_scores)\n",
         "            print(saved_scores)\n",
         "\n",
         "            # \u521b\u5efaenv_params\uff0c\u6bcf\u4e2aagent\u4f7f\u7528\u5bf9\u5e94\u6392\u5e8f\u540e\u7684trial\u793a\u8303\n",
-        "            # trial 0 -> \u6700\u5dee\u793a\u8303, trial 1 -> \u6b21\u5dee, trial 2 -> \u6b21\u4f18, trial 3 -> \u6700\u597d\n",
+        "            # agent 0 -> \u6700\u5dee\u793a\u8303, agent 1 -> \u6b21\u5dee, agent 2 -> \u6b21\u4f18\n",
         "            env_params = EnvParams(\n",
         "                other_params=other_params,\n",
-        "                other_init_state=saved_states,  # shape: (num_trials, hidden_size)\n",
-        "                other_init_last_obs=saved_obs,  # shape: (num_trials, obs_dim)\n",
+        "                other_init_state=saved_states,  # shape: (popsize, hidden_size)\n",
+        "                other_init_last_obs=saved_obs,  # shape: (popsize, obs_dim)\n",
         "            )\n",
         "\n",
         "            rng = jax.random.PRNGKey(3)\n",
